--- a/index.html
+++ b/index.html
@@ -1,9 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sheba</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Get Expert Professional Service at home | Sheba.xyz</title>
+    <!-- fav link -->
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
+
+    <!-- internal css link -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- bootstrap link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+    <!-- google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar custom-navbar navbar-expand-sm sticky-top bg-white">
+      <div class="container py-1">
+        <a class="navbar-brand" href="/">
+          <img
+            src="./images/logo.svg"
+            width="125"
+            class="img-fluid"
+            alt="logo"
+          />
+        </a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto text-center">
+            <a class="nav-link text-black fw-bold" href="#features">Features</a>
+            <a class="nav-link text-black fw-bold" href="#app">App</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div
+      class="container-fluid hero-container d-flex justify-content-center align-items-center"
+    >
+      <div class="">
+        <div class="">
+          <h1 class="text-white text-center motto">Your Personal Assistant</h1>
+          <h2 class="text-white text-center fw-bold h4">
+            One stop solution for your services. Order any service, anytime
+          </h2>
+        </div>
+
+        <div class="row my-4 px-2">
+          <div class="col-sm-3 my-2">
+            <div
+              class="bg-white rounded py-3 d-flex justify-content-center align-items-center"
+            >
+              <img src="./images/location.svg" alt="location" /><span
+                class="fw-bold ps-1"
+                >Gulshan</span
+              >
+            </div>
+          </div>
+
+          <div class="col-sm-9 my-2">
+            <input
+              type="search"
+              class="bg-white py-3 w-100 rounded ps-3 input-field"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- js link -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
