--- a/index.html
+++ b/index.html
@@ -91,6 +91,225 @@
         </div>
       </div>
     </div>
+
+    <!-- Testimonial -->
+    <div class="container-fluid testimonial-container my-5 py-5">
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <div class="line mb-1 me-2"></div>
+          <h2 class="text-uppercase features-title">Some happy face</h2>
+        </div>
+
+        <h3 class="h2 fw-bold mt-3">Real Happy Customers, Real Stories</h3>
+
+        <div class="row justify-content-between align-items-center mt-5">
+          <div class="col-lg-6">
+            <div class="testimonial-description p-4">
+              <p class="lh-lg fst-italic h5">
+                “ It was my marriage and wasn’t getting schedule from any beauty
+                parlor. So, I downloaded Sheba.xyz app and found that it has all
+                of my requirements. The beautician arrived in time and was
+                really amazing. Thank you.
+              </p>
+              <h3 class="h6 mt-3">- Zeba Fariba</h3>
+              <h4 class="features-title text-start">Management Trainee</h4>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <img
+              class="img-fluid mx-auto d-block rounded"
+              src="./images/testimonial.jpg"
+              alt="testimonial"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- App Download -->
+    <div id="app" class="container my-5 py-5">
+      <div class="row">
+        <div class="col-lg-5">
+          <img
+            class="img-fluid mx-auto d-block"
+            src="./images/app-download.png"
+            alt="app download"
+          />
+        </div>
+        <div class="col-lg-7 d-flex justify-content-center align-items-center">
+          <div class="">
+            <div class="d-flex align-items-center">
+              <div class="line mb-1 me-2"></div>
+              <h2 class="text-uppercase features-title">Some happy face</h2>
+            </div>
+
+            <h3 class="h2 fw-bold mt-3">Real Happy Customers, Real Stories</h3>
+            <p class="mt-3">
+              Give us your mobile number. You’ll get an SMS with the app
+              download link.
+            </p>
+
+            <input
+              type="text"
+              placeholder="Type your mobile number"
+              class="border py-3 w-75 h6 ps-3 rounded input-field"
+            />
+            <button class="px-4 py-3 text-white h6 rounded border-0 btn-action">
+              Get the app
+            </button>
+
+            <div class="d-flex flex-wrap gap-3 mt-3">
+              <img
+                width="170"
+                class="img-fluid"
+                src="./images/play-store.png"
+                alt=""
+              />
+              <img
+                width="170"
+                class="img-fluid"
+                src="./images/app-store.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact -->
+    <div class="container-fluid contact-container mt-5 py-5 position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-7 col-sm-6 col-12">
+            <h2 class="h4 fw-bold">
+              Can’t find your desired service? Let us know 24/7 in 16516.
+            </h2>
+            <button class="px-4 py-3 text-white h6 rounded border-0 btn-action">
+              Request a service
+            </button>
+          </div>
+
+          <div class="col-lg-4 col-md-5 col-sm-6 d-none d-sm-block">
+            <img
+              class="img-fluid position-absolute service-request-image"
+              src="./images/service-request.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer-container container-fluid py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-sm-4 col-6">
+                <h2 class="footer-font fw-bold text-uppercase">Contact</h2>
+                <a
+                  class="footer-font text-decoration-none text-black"
+                  href="tel:+16516"
+                  >16516</a
+                >
+                <br />
+                <a
+                  class="footer-font text-decoration-none text-black"
+                  href="mailto:info@sheba.xyz"
+                  >info@sheba.xyz</a
+                >
+
+                <h2 class="footer-font fw-bold text-uppercase mt-3">
+                  Company Address
+                </h2>
+                <p class="footer-font">
+                  House 454, Road No: 31, <br />
+                  Mohakhali DOHS, Dhaka
+                </p>
+              </div>
+
+              <div class="col-sm-4 col-6">
+                <h2 class="footer-font fw-bold text-uppercase">Other Pages</h2>
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >Blog</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >Help</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >Terms of Use</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >Privacy Policy</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >Sitemap</a
+                >
+              </div>
+
+              <div class="col-sm-4 col-6">
+                <h2 class="footer-font fw-bold text-uppercase">Company</h2>
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >sManager</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >sBusiness</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >sDelivery</a
+                >
+                <br />
+                <a class="text-decoration-none footer-font text-black" href="/"
+                  >sBondhu</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <h2 class="footer-font text-end text-uppercase fw-bold">
+              Download our app
+            </h2>
+            <p class="footer-font text-end">
+              Tackle your to-do list wherever you are with our mobile app & make
+              your life easy.
+            </p>
+
+            <div
+              class="d-flex flex-wrap justify-content-between align-items-center"
+            >
+              <img
+                class="img-fluid mt-1 mx-auto d-block"
+                width="120"
+                src="./images/play-store.png"
+                alt=""
+              />
+              <img
+                class="img-fluid mt-1 mx-auto d-block"
+                width="120"
+                src="./images/app-store.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <p class="mb-0 py-3 footer-font text-center bg-footer">
+        Copyright &copy; 2025 Developed by Eftykhar Rahman | All Rights Reserved
+      </p>
+    </footer>
     <!-- js link -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
