--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
 
     <!-- internal css link -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -87,6 +87,342 @@
               type="search"
               class="bg-white py-3 w-100 rounded ps-3 input-field"
             />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Hero Features -->
+    <div class="container">
+      <div class="bg-white hero-features-container rounded shadow-sm mb-3 mx-2">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf1.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">Best Deal</h2>
+          </div>
+
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf2.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">AC Repair Services</h2>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf3.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">Appliance Repair</h2>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf4.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">Beauty & Wellness</h2>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf5.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">Men's Care & Salon</h2>
+          </div>
+          <div class="col-md-2 col-sm-4 col-6 py-3">
+            <img
+              width="40"
+              class="img-fluid mx-auto d-block"
+              src="./images/hf6.jpg"
+              alt="hero feature"
+            />
+            <h2 class="features-title text-center py-2">Cleaning</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- EMI Banner -->
+    <div class="container">
+      <img class="img-fluid my-3" src="./images/emi.jpg" alt="emi banner" />
+    </div>
+
+    <!-- For Your Home Section -->
+    <div class="container">
+      <h2 class="h4 fw-bold my-4">For Your Home</h2>
+
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/h1.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">Gas Stove/Burner Services</h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/h2.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">
+            Plumbing & Sanitary Services
+          </h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/h3.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">Painting Services</h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/h4.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">Home Cleaning</h3>
+        </div>
+      </div>
+    </div>
+
+    <!-- Recommended -->
+    <div class="container my-5">
+      <h2 class="h4 fw-bold my-4">Recommended</h2>
+
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/r1.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">AC Servicing</h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/r2.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">Salon Care</h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/r3.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">House Shifting Services</h3>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+          <img
+            class="img-fluid mx-auto d-block rounded"
+            src="./images/r4.jpg"
+            alt="home"
+          />
+          <h3 class="h6 text-center fw-bold my-2">On Demand Driver</h3>
+        </div>
+      </div>
+    </div>
+    <!-- Why Choose US -->
+    <div class="container-fluid why-us-container mt-5 py-5">
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <div class="line mb-1 me-2"></div>
+          <h2 class="text-uppercase features-title">Why Choose Us</h2>
+        </div>
+
+        <h3 class="h2 fw-bold mt-3">Because we care about your safety</h3>
+
+        <div class="row align-items-center">
+          <div class="col-lg-5">
+            <div class="row align-items-center">
+              <div class="col-sm-6 px-2 my-3">
+                <div
+                  class="bg-white p-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    width="50"
+                    class="img-fluid me-2"
+                    src="./images/f1.jpg"
+                    alt="why us"
+                  />
+                  <h2 class="h6 fw-bold">Ensuring Masks</h2>
+                </div>
+              </div>
+              <div class="col-sm-6 px-2 my-3">
+                <div
+                  class="bg-white p-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    width="50"
+                    class="img-fluid me-2"
+                    src="./images/f2.jpg"
+                    alt="why us"
+                  />
+                  <h2 class="h6 fw-bold">24/7 Support</h2>
+                </div>
+              </div>
+              <div class="col-sm-6 px-2 my-3">
+                <div
+                  class="bg-white p-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    width="50"
+                    class="img-fluid me-2"
+                    src="./images/f3.jpg"
+                    alt="why us"
+                  />
+                  <h2 class="h6 fw-bold">Sanitizing Hands & Equipment</h2>
+                </div>
+              </div>
+              <div class="col-sm-6 px-2 my-3">
+                <div
+                  class="bg-white p-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    width="50"
+                    class="img-fluid me-2"
+                    src="./images/f4.jpg"
+                    alt="why us"
+                  />
+                  <h2 class="h6 fw-bold">Ensuring Gloves</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-7">
+            <img
+              class="img-fluid mx-auto d-block rounded"
+              src="./images/why-choose-us.jpg"
+              alt="why choose us banner"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Counts -->
+    <div class="container-fluid counts-container">
+      <div class="container py-4">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-4 col-sm-6 my-3">
+            <h2 class="text-center h1 fw-bold">20,000 +</h2>
+            <h3 class="h5 text-center">Service Providers</h3>
+          </div>
+
+          <div class="col-md-4 col-sm-6 my-3">
+            <h2 class="text-center h1 fw-bold">500,000 +</h2>
+            <h3 class="h5 text-center">Orders Received</h3>
+          </div>
+
+          <div class="col-md-4 col-sm-6 my-3">
+            <h2 class="text-center h1 fw-bold">450,000 +</h2>
+            <h3 class="h5 text-center">5 Star Review</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- How it works -->
+    <div id="features" class="container-fluid my-5 py-5">
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <div class="line mb-1 me-2"></div>
+          <h2 class="text-uppercase features-title">How it Works</h2>
+        </div>
+
+        <h3 class="h2 fw-bold mt-3">Easiest way to get a service</h3>
+        <div class="row align-items-center mt-5">
+          <div class="col-lg-6">
+            <img
+              src="./images/app.jpg"
+              class="img-fluid rounded mx-auto d-block"
+              alt="app banner"
+            />
+          </div>
+
+          <div class="col-lg-6 ps-5 pt-5">
+            <div
+              class="features-list position-relative d-flex align-items-center pb-5"
+            >
+              <div class="d-flex justify-content-center align-items-center">
+                <div class="round-div rounded-circle position-absolute"></div>
+                <div class="feature-number text-white h4 position-absolute">
+                  1
+                </div>
+              </div>
+
+              <div class="feature-description-continer ms-5">
+                <h2 class="h5 fw-bold">Select the Service</h2>
+                <h3 class="feature-description">
+                  Pick the service you are looking for- from the website or the
+                  app.
+                </h3>
+              </div>
+            </div>
+
+            <div
+              class="features-list position-relative d-flex align-items-center pb-5"
+            >
+              <div class="d-flex justify-content-center align-items-center">
+                <div class="round-div rounded-circle position-absolute"></div>
+                <div class="feature-number text-white h4 position-absolute">
+                  2
+                </div>
+              </div>
+
+              <div class="feature-description-continer ms-5">
+                <h2 class="h5 fw-bold">Pick your schedule</h2>
+                <h3 class="feature-description">
+                  Pick your convenient date and time to avail the service. Pick
+                  the service provider based on their rating.
+                </h3>
+              </div>
+            </div>
+
+            <div
+              class="features-list position-relative d-flex align-items-center pb-5"
+            >
+              <div class="d-flex justify-content-center align-items-center">
+                <div class="round-div rounded-circle position-absolute"></div>
+                <div class="feature-number text-white h4 position-absolute">
+                  3
+                </div>
+              </div>
+
+              <div class="feature-description-continer ms-5">
+                <h2 class="h5 fw-bold">Place Your Order & Relax</h2>
+                <h3 class="feature-description">
+                  Review and place the order. Now just sit back and relax. We’ll
+                  assign the expert service provider’s schedule for you.
+                </h3>
+              </div>
+            </div>
           </div>
         </div>
       </div>
